fix: overflow inner text in pre tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,13 @@ header, nav {
 	font-family: monospace;
 	font-size: large;
 	color: greenyellow;
+}
+
+pre {
+	white-space: pre-wrap;       /* Since CSS 2.1 */
+	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+	white-space: -pre-wrap;      /* Opera 4-6 */
+	white-space: -o-pre-wrap;    /* Opera 7 */
 	word-wrap: break-word;
 }
 
